# open-msys2-mintty

./: LICENSE  README.md  open-msys2-mintty.cabal
app/: Main.hs
