name:                open-msys2-mintty
version:             0.1.0.0
synopsis:            A tiny script to launch bash on mintty at the given directory.
description:         Please see README.md
homepage:            http://github.com/igrep/open-msys2-mintty#readme
license:             BSD3
license-file:        LICENSE
author:              Yuji Yamamoto
maintainer:          whosekiteneverfly@gmail.com
copyright:           2016 Yuji Yamamoto
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable open-msys2-mintty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , process >= 1.2 && < 2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/igrep/open-msys2-mintty
